30 March 2026 v719: Export data > Research data: Export answers now also include new fields: explanation, answered_by_type, ai_info, answered_at Long intro text collapsed in 4 lines with a “Read More…” link you can click to see it all. Just like on front page. Answer questionnaires with AI: Fixed: Table was not visible on small screens like mobile phones.

--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ h3, .pageSubTitleFont {
 .sectionCollapsed {
   display: -webkit-box;
   overflow: hidden;
-  -webkit-line-clamp: 5;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
 
